K8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: reddit-clone-service
spec:
  selector:
    app: reddit-clone
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
